# investool

./: .dockerignore  .env.example  .env.production.example  .gitignore  ADVANCED_FORMULAS.md  API_DOCUMENTATION.md  AssetClassifier.cpp  AssetClassifier.h  CMakeLists.txt  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  Dockerfile  FINETUNING.md  FinancialCalculator.cpp  FinancialCalculator.h  PHASE2_EXECUTION.md  PHASE2_QUICKSTART.sh  PHASE2_STATUS.md  PHASE3_GUIDE.md  PHASE4_GUIDE.md  PRODUCTION_LAUNCH.md  PYTHON_BRIDGE.md  PortfolioOptimizer.cpp  PortfolioOptimizer.h  README.md  RatioAnalyzer.cpp  RatioAnalyzer.h  RiskAnalyzer.cpp  RiskAnalyzer.h  StrategyBacktester.cpp  StrategyBacktester.h  bindings.cpp  docker-compose.prod.yml  docker-compose.yml  main.cpp  test_api_client.py  test_bindings.py  test_phase2_integration.py  test_phase2_standalone.py
data/test_cases/: benchmark_suite.json
examples/: phase5_complete_example.py
finrisk_ai/: .env.example  README.md  __init__.py  requirements.txt
finrisk_ai/agents/: __init__.py  specialized_agents.py
finrisk_ai/api/: __init__.py  main.py  schemas.py
finrisk_ai/core/: __init__.py  cpp_bridge.py  data_ingestion.py  orchestrator.py  orchestrator_v2.py  state.py
finrisk_ai/examples/: complete_example.py
finrisk_ai/finetuning/: __init__.py  data_collector.py  data_preparation.py  evaluator.py  hybrid_system.py  model_manager.py
finrisk_ai/memory/: __init__.py  mem0_system.py
finrisk_ai/rag/: __init__.py  graph_rag.py  hybrid_search.py
finrisk_ai/tests/: __init__.py  test_core.py
finrisk_ai/utils/: __init__.py  production_optimizations.py
k8s/: api-deployment.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  neo4j-deployment.yaml  postgres-deployment.yaml  redis-deployment.yaml  secrets.yaml.template
scripts/: init_db.sql
scripts/deployment/: 2-build-image.sh  (+4 more)
(+10 files in other folders)
